@@ -1,5 +1,6 @@
 master:
 
+* Improvement: Add `read_timeout` configuration for URI Adapter download_content method.
 * README adjustments for Ruby beginners (add links, elucidate model in Quick Start)
 * Bugfix: Now it's possible to save images from URLs with special characters [#1932]
 * Fix a nil error in content type validation matcher [#1910]
